Simple Tauren animation.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="center">
             <h1>Friske Learning</h1>
         </div>
+        <div class="hire-me">
+            <div class="quote text-center"><span>Walk with the<br/> Earthmother,<br/> Hire Me!</span></div>
+            <img src="/assets/tauren-hire-me.png" alt="hire me cartoon">
+        </div>
     </header>
     <section>
         <div class="row">
