Adjustments to the hire me! sign

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 <body class="dark-theme">
     <header class="hero-banner position-relative">
         <div class="center">
-            <h1>Friske Learning</h1>
+            <h1>Benjamin Friske</h1>
         </div>
         <div class="hire-me">
             <div class="quote text-center"><span>Walk with the<br/> Earthmother,<br/> Hire Me!</span></div>
+            <div class="quote-shadow"></div>
             <img src="/assets/tauren-hire-me.png" alt="hire me cartoon">
         </div>
     </header>
