Fun button code.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="row">
             <div class="col-6 position-relative">
                 <div class="text-end">
-                    <button class="btn btn-gold">Hello World</button>
+                    <div class="wrap">
+                        <button class="button">Submit</button>
+                    </div>
                 </div>
                 <p class="p-5 text-start">
                     "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, 
